<resources>
    <string name="app_second_name">Three Dimensions App</string>
    <string name="app_name">ThreeDimensions</string>
    <string name="toggle_button_text">Toggle this button to access second button</string>
    <string name="show_person">Show person</string>
    <string name="enable_this_for_access_to_second_activity">Enable this for access to second activity</string>
    <string name="enable_this_for_access_to_third_activity">Enable this for access to third activity</string>
    <string name="sample_email_com">sample@email.com</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="third_activity">Third activity</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="textview">Choose one of the radio buttons</string>
</resources>
